// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated files > icon index barrel > ts components 1`] = `
"/* 
 * Auto-generated by nuxt-compose-icons.
 * Feel free to version this file, but do not edit directly as it will be overwritten at build time. 
 */


export { default as ArrowUpIcon } from './ArrowUpIcon';
export { default as LogoIcon } from './LogoIcon';
export { default as TrashIcon } from './TrashIcon';

"
`;

exports[`generated files > icon index barrel > vue components 1`] = `
"/* 
 * Auto-generated by nuxt-compose-icons.
 * Feel free to version this file, but do not edit directly as it will be overwritten at build time. 
 */


export { default as ArrowUpIcon } from './ArrowUpIcon.vue';
export { default as LogoIcon } from './LogoIcon.vue';
export { default as TrashIcon } from './TrashIcon.vue';

"
`;

exports[`generated files > icon registry > eject mode (custom destDir), ts components 1`] = `
"
/* ------------------------------------------------------------ */
/*                        Icon Registry                        */
/* ------------------------------------------------------------ */
/* 
 * Auto-generated by nuxt-compose-icons.
 * Feel free to version this file, but do not edit directly as it will be overwritten at build time. 
 */

import type { Component } from 'vue';
import ArrowUpIcon from './ArrowUpIcon';
import LogoIcon from './LogoIcon';
import TrashIcon from './TrashIcon';

export interface IconRegistryEntry {
  name: string;
  pascalName: string;
  kebabName: string;
  importPath: string;
  component: Component;
}

export const iconRegistry: IconRegistryEntry[] = [
  { name: 'ArrowUpIcon', pascalName: 'ArrowUpIcon', kebabName: 'arrow-up-icon', importPath: './ArrowUpIcon', component: ArrowUpIcon },
  { name: 'LogoIcon', pascalName: 'LogoIcon', kebabName: 'logo-icon', importPath: './LogoIcon', component: LogoIcon },
  { name: 'TrashIcon', pascalName: 'TrashIcon', kebabName: 'trash-icon', importPath: './TrashIcon', component: TrashIcon },
];
"
`;

exports[`generated files > icon registry > eject mode, vue components keep their extension 1`] = `
"
/* ------------------------------------------------------------ */
/*                        Icon Registry                        */
/* ------------------------------------------------------------ */
/* 
 * Auto-generated by nuxt-compose-icons.
 * Feel free to version this file, but do not edit directly as it will be overwritten at build time. 
 */

import type { Component } from 'vue';
import ArrowUpIcon from './ArrowUpIcon.vue';
import LogoIcon from './LogoIcon.vue';
import TrashIcon from './TrashIcon.vue';

export interface IconRegistryEntry {
  name: string;
  pascalName: string;
  kebabName: string;
  importPath: string;
  component: Component;
}

export const iconRegistry: IconRegistryEntry[] = [
  { name: 'ArrowUpIcon', pascalName: 'ArrowUpIcon', kebabName: 'arrow-up-icon', importPath: './ArrowUpIcon.vue', component: ArrowUpIcon },
  { name: 'LogoIcon', pascalName: 'LogoIcon', kebabName: 'logo-icon', importPath: './LogoIcon.vue', component: LogoIcon },
  { name: 'TrashIcon', pascalName: 'TrashIcon', kebabName: 'trash-icon', importPath: './TrashIcon.vue', component: TrashIcon },
];
"
`;

exports[`generated files > icon registry > virtual mode (.nuxt), ts components 1`] = `
"
/* ------------------------------------------------------------ */
/*                        Icon Registry                        */
/* ------------------------------------------------------------ */
/* 
 * Auto-generated by nuxt-compose-icons.
 * Feel free to version this file, but do not edit directly as it will be overwritten at build time. 
 */

import type { Component } from 'vue';
import ArrowUpIcon from './ArrowUpIcon';
import LogoIcon from './LogoIcon';
import TrashIcon from './TrashIcon';

export interface IconRegistryEntry {
  name: string;
  pascalName: string;
  kebabName: string;
  importPath: string;
  component: Component;
}

export const iconRegistry: IconRegistryEntry[] = [
  { name: 'ArrowUpIcon', pascalName: 'ArrowUpIcon', kebabName: 'arrow-up-icon', importPath: './ArrowUpIcon', component: ArrowUpIcon },
  { name: 'LogoIcon', pascalName: 'LogoIcon', kebabName: 'logo-icon', importPath: './LogoIcon', component: LogoIcon },
  { name: 'TrashIcon', pascalName: 'TrashIcon', kebabName: 'trash-icon', importPath: './TrashIcon', component: TrashIcon },
];
"
`;

exports[`generated files > size stylesheet > custom icon classes widen the selector 1`] = `
":root {
    --size-sm: 1.5rem;
    --size-md: 2rem;
    --size-lg: 3rem;
    --size-xl: 4rem;
}
/* 
 * We don't define fallback values to let the initial values subsist (if any).
 * This catches the case of a missing prop — instead of a module default,
 * we rely on the original value from the SVG. 
 */
.compose-icon, .my-icon {
&.size-sm {--icon-size: var(--size-sm)}

&.size-md {--icon-size: var(--size-md)}

&.size-lg {--icon-size: var(--size-lg)}

&.size-xl {--icon-size: var(--size-xl)}

}"
`;

exports[`generated files > size stylesheet > custom sizes are merged on top of the defaults 1`] = `
":root {
    --size-sm: 1.5rem;
    --size-md: 20px;
    --size-lg: 3rem;
    --size-xl: 4rem;
    --size-huge: 100px;
}
/* 
 * We don't define fallback values to let the initial values subsist (if any).
 * This catches the case of a missing prop — instead of a module default,
 * we rely on the original value from the SVG. 
 */
.compose-icon {
&.size-sm {--icon-size: var(--size-sm)}

&.size-md {--icon-size: var(--size-md)}

&.size-lg {--icon-size: var(--size-lg)}

&.size-xl {--icon-size: var(--size-xl)}

&.size-huge {--icon-size: var(--size-huge)}

}"
`;

exports[`generated files > size stylesheet > default sizes 1`] = `
":root {
    --size-sm: 1.5rem;
    --size-md: 2rem;
    --size-lg: 3rem;
    --size-xl: 4rem;
}
/* 
 * We don't define fallback values to let the initial values subsist (if any).
 * This catches the case of a missing prop — instead of a module default,
 * we rely on the original value from the SVG. 
 */
.compose-icon {
&.size-sm {--icon-size: var(--size-sm)}

&.size-md {--icon-size: var(--size-md)}

&.size-lg {--icon-size: var(--size-lg)}

&.size-xl {--icon-size: var(--size-xl)}

}"
`;
